k8s/overlays/prod/patches/namespace-podsecurity.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mood
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
