k8s/overlays/prod/patches/prometheus-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 2
